Refactor code structure for improved readability and maintainability

--- a/_config.yml
+++ b/_config.yml
@@ -96,12 +96,13 @@ theme_mode: # [light | dark]
 #
 # e.g. 'https://cdn.com'
 cdn: https://sukiElaina.github.io/cdn
-
+# cdn: "https://chirpy-img.netlify.app"
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/Elaina_avatar.jpg
+#avatar: "assets/img/Elaina_avatar.jpg"
+avatar: "/commons/avatar.jpg"
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: assets/img/Elaina_avatar.jpg
+social_preview_image:
 
 # boolean type, the global switch for TOC in posts.
 toc: true
