Add news scope to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -196,7 +196,11 @@ defaults:
     values:
       layout: page
       permalink: /:title/
-
+  - scope:
+      path: ""
+      type: news  # see `site.collections`
+    values:
+      layout: page
 sass:
   style: compressed
 
