更新 GitHub Actions 工作流，添加本地运行支持并修复 base_path 变量；更新配置文件以启用自托管静态资源并设置生产环境；添加 .actrc 文件以支持 act 的容器映射

--- a/_config.yml
+++ b/_config.yml
@@ -132,10 +132,10 @@ comments:
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: false # boolean, keep empty means false
+    enabled: true # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
-    env: # [development | production]
+    env: production # [development | production]
 
 pwa:
   enabled: true # The option for PWA feature (installable)
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://sukiElaina.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -172,7 +172,7 @@ collections:
     sort_by: order
 
   news:
-    output: true
+    output: false
     sort_by: date
 
 defaults:
