--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -35,9 +35,21 @@ jobs:
           # If using the 'assets' git submodule from Chirpy Starter, uncomment above
           # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
 
+      # Skip Pages setup when running locally with act (it needs a valid GitHub token and API)
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
+        if: ${{ !env.ACT }}
+
+      # Normalize base_path so build/upload steps work both on GH Actions and act
+      - name: Compute base path
+        id: base
+        run: |
+          if [ "${ACT}" = "true" ]; then
+            echo "base_path=" >> "$GITHUB_OUTPUT"
+          else
+            echo "base_path=${{ steps.pages.outputs.base_path }}" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -46,7 +58,7 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll b -d "_site${{ steps.base.outputs.base_path }}"
         env:
           JEKYLL_ENV: "production"
 
@@ -59,7 +71,7 @@ jobs:
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: "_site${{ steps.base.outputs.base_path }}"
 
   deploy:
     environment:
