Add automated RSS fetching and AI summarization system
- Implemented a complete workflow for fetching RSS feeds, generating AI summaries, and publishing to Jekyll blog.
- Created main processing script (`index.js`) to handle RSS fetching, data storage, and article processing.
- Developed AI summarization module (`ai-summary.js`) using SiliconFlow API for generating article summaries.
- Configured RSS sources in `rss.json` and provided an example configuration in `rss.json.example`.
- Established directory structure for storing fetched RSS data and generated Markdown files.
- Added error handling and logging for improved robustness during RSS fetching and AI summarization.
- Updated README files to provide comprehensive documentation on setup, usage, and configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,14 @@ assets/js/dist
 
 # Other
 origin/*
-rss/*
-main/*
+rss/*.json
+!rss/.gitkeep
+
+# API Keys and secrets
+.env
+.env.local
+*.key
+*.pem
+
+# Main directory - keep code, ignore data
+main/node_modules/
