--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,9 @@ pwa:
     # Usually its value is the `baseurl` of another website that
     # shares the same domain name as the current website.
     deny_paths:
-      # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
+      # 动态内容频繁更新，避免被离线缓存命中导致浏览器展示旧页面
+      - "/news"       # 排除新闻列表和每日合并内容 `<SITE_URL>/news/*`
+      - "/rss"        # 排除原始抓取数据 `<SITE_URL>/rss/*`
 
 paginate: 10
 
