优化变更检查逻辑，确保准确判断是否有变更

--- a/.github/workflows/rss-update.yml
+++ b/.github/workflows/rss-update.yml
@@ -44,7 +44,11 @@ jobs:
       - name: Check for changes
         id: git-check
         run: |
-          git diff --exit-code || echo "has_changes=true" >> $GITHUB_OUTPUT
+          if git status --porcelain | grep -q .; then
+            echo "has_changes=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_changes=false" >> "$GITHUB_OUTPUT"
+          fi
 
       # 6. 提交变更
       - name: Commit and push changes
